--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/styles.css">
-</head>
-<body>
-
-<div class="wrapper">
-    <div class="top">
-        <div class="title"><h1>My Blog</h1></div>
-    </div>
-    <div class="content">
-        {%for post in posts: %}
-        <div class="card">
-            <h2>{{post.title}}</h2>
-            <p class="text">{{post.subtitle}}</p>
-            <a href="{{url_for('posted',num = post.id)}}">Read</a>
+    {% include 'header.html' %}
+        <!-- Page Header-->
+        <header class="masthead" style="background-image: url('static/assets/img/home-bg.jpg')">
+            <div class="container position-relative px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="site-heading">
+                            <h1>Saurav's blog</h1>
+                            <span class="subheading">A collection of random things from me</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- Main Content-->
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    <!-- Post preview-->
+                    {% for data in posts %}
+                        <div class="post-preview">
+                            <a href="{{url_for('post', num = data.id)}}">
+                                <h2 class="post-title">{{data.title}}</h2>
+                                <h3 class="post-subtitle">{{data.subtitle}}</h3>
+                            </a>
+                            <p class="post-meta">
+                                Posted by
+                                <a href="#!">Sauraav katwal</a>
+                                on September 24, 2023
+                            </p>
+                        </div>
+                        <!-- Divider-->
+                        <hr class="my-4" />
+                    {% endfor %}
+                    
+                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+                </div>
+            </div>
         </div>
-        {%endfor%}
-    </div>
-</div>
-</body>
-<footer>
-    <p>Made with ♥️ in London.</p>
-</footer>
-</html>
+        <!-- Footer-->
+        {% include 'footer.html' %}
